--- a/sevices.html
+++ b/sevices.html
@@ -10,9 +10,25 @@
 <body>
     <div class="topnav">
         <a href="index.html">Home</a>
-        <a class="active" href="news.html">News</a>
+        <a class="active" href="services.html">News</a>
         <a href="contact.html">Contact</a>
         <a href="about.html">About</a>
+      </div>
+      <div class="all">
+      <div class="top-left">
+
+      </div>
+      <div class="top-right">
+
+      </div>
+      <div class="bottom-left">
+
+      </div>
+      <div class="bottom-right">
+          
+      </div>
+
+
       </div>
 </body>
 </html>
