--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
     <div class="topnav">
         <a href="index.html">Home</a>
-        <a href="news.html">News</a>
+        <a href="services.html">News</a>
         <a class="active" href="contact.html">Contact</a>
         <a href="about.html">About</a>
       </div> 
