--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <body>
     <div class="topnav">
         <a href="index.html">Home</a>
-        <a href="services.html">News</a>
+        <a href="services.html">services</a>
         <a href="contact.html">Contact</a>
         <a class="active" href="about.html">About</a>
       </div>
