--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--top nav bar-->
     <div class="topnav">
       <a class="active" href="#home">Home</a>
-      <a href="services.html">News</a>
+      <a href="services.html">services</a>
       <a href="contact.html">Contact</a>
       <a href="about.html">About</a>
     </div>
