--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
       <a href="contact.html">Contact</a>
       <a href="about.html">About</a>
     </div>
-    <div>
-      <h1>PICTURE BOARD</h1>
-    </div>
+    
     <!---full window-->
     <div class="full-width">
     <!--slideshow and dots-->
     <div class="slide-dots">
+      <h1 class="board" id="yes">PICTURE BOARD</h1>
     <!-- Slideshow container -->
 <div class="slideshow-container">
 
