--- a/services.html
+++ b/services.html
@@ -16,16 +16,16 @@
       </div>
       <div class="all">
       <div class="top-left">
-
+        <h2 class="box">Content marketing</h2>
       </div>
       <div class="top-right">
-
+        <h2 class="box">PR/Social media</h2>
       </div>
       <div class="bottom-left">
-
+        <h2 class="box">Creative services</h2>
       </div>
       <div class="bottom-right">
-          
+        <h2 class="box">Insights & Analytics</h2>  
       </div>
 
 
